--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,178</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,415</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">org.wipro.auto.saucedemo.testcase.SignupScenario_DDF</td><td><a href="#m0">tc02_validate_signup_valid_credential</a></td><td rowspan="3">1740668222222</td><td rowspan="3">2439</td></tr><tr class="passedeven"><td><a href="#m1">tc02_validate_signup_valid_credential</a></td></tr><tr class="passedeven"><td><a href="#m2">tc02_validate_signup_valid_credential</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">org.wipro.auto.saucedemo.testcase.LoginScenario</td><td><a href="#m0">tc01_validate_login_valid_credential</a></td><td rowspan="1">1740841416797</td><td rowspan="1">1024</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">org.wipro.auto.saucedemo.testcase.SignupScenario_DDF#tc02_validate_signup_valid_credential</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>fname3</td><td>lname3</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">org.wipro.auto.saucedemo.testcase.SignupScenario_DDF#tc02_validate_signup_valid_credential</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>fname1</td><td>lname1</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">org.wipro.auto.saucedemo.testcase.SignupScenario_DDF#tc02_validate_signup_valid_credential</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>fname2</td><td>lname2</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">org.wipro.auto.saucedemo.testcase.LoginScenario#tc01_validate_login_valid_credential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
