--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Santosh\AppData\Local\Temp\testng-eclipse--2145313264\testng-customsuite.xml</span>
+                    <span>C:\Users\Santosh\AppData\Local\Temp\testng-eclipse-1725195816\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="org.wipro.auto.saucedemo.testcase.SignupScenario_DDF" class="method navigator-link" hash-for-method="tc02_validate_signup_valid_credential(fname3, lname3)">tc02_validate_signup_valid_credential(fname3, lname3)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="org.wipro.auto.saucedemo.testcase.SignupScenario_DDF" class="method navigator-link" hash-for-method="tc02_validate_signup_valid_credential(fname1, lname1)">tc02_validate_signup_valid_credential(fname1, lname1)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="org.wipro.auto.saucedemo.testcase.SignupScenario_DDF" class="method navigator-link" hash-for-method="tc02_validate_signup_valid_credential(fname2, lname2)">tc02_validate_signup_valid_credential(fname2, lname2)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="org.wipro.auto.saucedemo.testcase.LoginScenario" class="method navigator-link" hash-for-method="tc01_validate_login_valid_credential">tc01_validate_login_valid_credential</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,31 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">org.wipro.auto.saucedemo.testcase.SignupScenario_DDF</span>
+              <span class="class-name">org.wipro.auto.saucedemo.testcase.LoginScenario</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="tc02_validate_signup_valid_credential(fname3, lname3)">
-                  </a> <!-- tc02_validate_signup_valid_credential(fname3, lname3) -->
-                  <span class="method-name">tc02_validate_signup_valid_credential</span>
-                  <span class="parameters">(fname3,lname3)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="tc02_validate_signup_valid_credential(fname1, lname1)">
-                  </a> <!-- tc02_validate_signup_valid_credential(fname1, lname1) -->
-                  <span class="method-name">tc02_validate_signup_valid_credential</span>
-                  <span class="parameters">(fname1,lname1)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="tc02_validate_signup_valid_credential(fname2, lname2)">
-                  </a> <!-- tc02_validate_signup_valid_credential(fname2, lname2) -->
-                  <span class="method-name">tc02_validate_signup_valid_credential</span>
-                  <span class="parameters">(fname2,lname2)</span>
+                  <a name="tc01_validate_login_valid_credential">
+                  </a> <!-- tc01_validate_login_valid_credential -->
+                  <span class="method-name">tc01_validate_login_valid_credential</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Santosh\AppData\Local\Temp\testng-eclipse--2145313264\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Santosh\AppData\Local\Temp\testng-eclipse-1725195816\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -172,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;org.wipro.auto.saucedemo.testcase.SignupScenario_DDF&quot;/&gt;
+      &lt;class name=&quot;org.wipro.auto.saucedemo.testcase.LoginScenario&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -212,24 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'tc02_validate_signup_valid_credential')
-data.setCell(0, 2, 'org.wipro.auto.saucedemo.testcase.SignupScenario_DDF')
-data.setCell(0, 3, 2439);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'tc02_validate_signup_valid_credential')
-data.setCell(1, 2, 'org.wipro.auto.saucedemo.testcase.SignupScenario_DDF')
-data.setCell(1, 3, 2205);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'tc02_validate_signup_valid_credential')
-data.setCell(2, 2, 'org.wipro.auto.saucedemo.testcase.SignupScenario_DDF')
-data.setCell(2, 3, 1876);
+data.setCell(0, 1, 'tc01_validate_login_valid_credential')
+data.setCell(0, 2, 'org.wipro.auto.saucedemo.testcase.LoginScenario')
+data.setCell(0, 3, 1024);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -255,42 +220,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">org.wipro.auto.saucedemo.testcase.SignupScenario_DDF</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">org.wipro.auto.saucedemo.testcase.LoginScenario</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">tc02_validate_signup_valid_credential(fname1, lname1)</span>
-                <span class="method-start">4577 ms</span>
+                <span class="method-name">tc01_validate_login_valid_credential</span>
+                <span class="method-start">7260 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">quitBrowser</span>
-                <span class="method-start">6462 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">launchBrowser</span>
-                <span class="method-start">6464 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">tc02_validate_signup_valid_credential(fname2, lname2)</span>
-                <span class="method-start">9776 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">quitBrowser</span>
-                <span class="method-start">11984 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">launchBrowser</span>
-                <span class="method-start">11986 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">tc02_validate_signup_valid_credential(fname3, lname3)</span>
-                <span class="method-start">15644 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">quitBrowser</span>
-                <span class="method-start">18086 ms</span>
+                <span class="method-start">8295 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
